ClusterIp.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flip
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deployment
  template:
    metadata:
      name: dev
      labels:
        name: deployment
    spec:
      containers:
        - name: signup
          image: httpd
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: flip-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: deployment
  type: ClusterIP
